--- a/styles.css
+++ b/styles.css
@@ -53,11 +53,14 @@
  
 
 body{
-    background-image:url(https://i.ytimg.com/vi/WQjpiLBIkuE/maxresdefault.jpg);
     background-size: 100%;
     align-items: center;
     justify-content: center;
     margin: 0;
+    min-height: 100vh;
+    background-image:url(https://www.shutterstock.com/image-vector/plane-night-sky-airplane-flying-600nw-1711248121.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 #calculator{
