--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@
     list-style-type: none;
     border: 5px black;
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(7, 1fr);
     text-align: center;
     background-color: hsl(0, 0%, 5%, 0.5);
  
@@ -30,7 +30,7 @@
  
  .click a{
  
-    font-size: 3rem;
+  font-size: 2.5rem;
     font-weight: bold;
     cursor: pointer;
     border: none;
@@ -57,10 +57,10 @@ body{
     align-items: center;
     justify-content: center;
     margin: 0;
-    min-height: 100vh;
-    background-image:url(https://www.shutterstock.com/image-vector/plane-night-sky-airplane-flying-600nw-1711248121.jpg);
+    background-image: url('background.jpg');
     background-size: cover;
     background-position: center;
+
 }
 
 #calculator{
